# online_imtiaz_mart

./: docker-compose.yml
.github/workflows/: deploy.yml
inventory_service/: Dockerfile  pyproject.toml
inventory_service/inventory_service/: inventory.proto  inventory_pb2.py  main.py  schemas.py  settings.py
notification_service/: Dockerfile.dev  pyproject.toml
notification_service/notification_service/: main.py  notification.proto  notification_pb2.py  schemas.py  settings.py
order_service/: Dockerfile.dev  pyproject.toml
order_service/order_service/: main.py  order.proto  order_pb2.py  schemas.py  settings.py
payment_service/: Dockerfile.dev  pyproject.toml
payment_service/payment_service/: main.py  payment.proto  payment_pb2.py  schemas.py  settings.py
product_service/: Dockerfile.dev  pyproject.toml
product_service/product_service/: main.py  product.proto  product_pb2.py  schema.py
user_service/: Dockerfile.dev  pyproject.toml
user_service/user_service/: main.py  schema.py  user.proto  user_pb2.py
