[tool.poetry]
name = "order-service"
version = "0.1.0"
description = ""
authors = ["Muhammad Adnan <adnasir607@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlmodel = {extras = ["postgresql"], version = "^0.0.21"}
pydantic = {extras = ["postgresql"], version = "^2.8.2"}
docker = "^7.1.0"
python-docker = "^0.2.0"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
